用户登录，权限管理（flask-login、flask-sqlalchemy、flask-whooshee、python-dotenv）

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -10,7 +10,7 @@
                 <div class="description">整合纷繁复杂的<b>图片</b></div>
                 <div class="ui top right attached pink label">New</div>
             </div>
-            <a href="" class="ui attached button"><i class="image icon"></i></a>
+            <a href="{{ url_for('auth.login') }}" class="ui attached button"><i class="image icon"></i></a>
         </div>
     </div>
 {% endblock %}
