模板改动，静态文件

--- a/main/templates/auth/login.html
+++ b/main/templates/auth/login.html
@@ -2,6 +2,11 @@
 
 {% block title %}登录{% endblock %}
 
+{% block nav %}
+    <a class="active item"><i class="sign in icon"></i>登录</a>
+    <a class="item" href="{{ url_for('main.index') }}"><i class="arrow left icon"></i>返回首页</a>
+{% endblock %}
+
 {% block content %}
     <div id="column">
         <h2 class="ui green image header">
