--- a/main/templates/auth/login.html
+++ b/main/templates/auth/login.html
@@ -44,8 +44,18 @@
                         <i class="lock icon"></i>
                     </div>
                 </div>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                 <input class="ui fluid large green submit button" type="submit" name="submit" value="登录">
             </div>
         </form>
     </div>
+{% endblock %}
+
+{% block script %}
+    {{ super() }}
+    <script>
+        $('.message .close').on('click', function () {
+            $(this).closest('.message').transition('fade');
+        });
+    </script>
 {% endblock %}
