css、js 等相关资源文件由 cdn 移至本地；引入中文注释

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -7,7 +7,7 @@
         <meta name="author" content="yuangezhizao"/>
         <meta name="Copyright" content="Copyright yuangezhizao All Rights Reserved."/>
         <meta name="format-detection" content="telephone=no"/>
-        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/semantic-ui/dist/semantic.min.css">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='static/css/semantic.min.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='static/css/main.css') }}">
         <link rel="dns-prefetch" href="//lab.yuangezhizao.cn">
         <link rel="dns-prefetch" href="//www.yuangezhizao.cn">
@@ -38,42 +38,10 @@
     </div>
 </div>
 {% block script %}
-    <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/semantic-ui/dist/semantic.min.js"></script>
-    {{ moment.include_moment(local_js='https://cdn.jsdelivr.net/npm/moment/min/moment-with-locales.min.js') }}
-    {{ moment.lang('zh-CN') }}
-    <script>
-        _t = function (s) {
-            return s
-        };
-
-        function gEle(a) {
-            return document.getElementById(a)
-        }
-
-        function _(e, t, i) {
-            var a = null;
-            if ("text" === e) return document.createTextNode(t);
-            a = document.createElement(e);
-            for (var n in t) if ("style" === n) for (var o in t.style) a.style[o] = t.style[o]; else if ("className" === n) a.className = t[n]; else if ("event" === n) for (var o in t.event) a.addEventListener(o, t.event[o]); else a.setAttribute(n, t[n]);
-            if (i) if ("string" == typeof i) a.innerHTML = i; else if (Array.isArray(i)) for (var l = 0; l < i.length; l++) null != i[l] && a.appendChild(i[l]);
-            return a
-        }
-
-        pageConfig = {"lang": "zh"};
-
-        auth = {
-            logout: function () {
-                var msg = confirm("确认注销吗？");
-                console.log(msg);
-                if (msg) {
-                    createUpdateNotice(_t("正在注销……"), "00F");
-                } else {
-                    return false;
-                }
-            },
-        }
-    </script>
+    <script src="{{ url_for('static', filename='static/js/jquery.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='static/js/semantic.min.js') }}"></script>
+    {{ moment.include_moment(local_js=url_for('static', filename='static/js/moment-with-locales.min.js')) }}
+    <script src="{{ url_for('static', filename='static/js/main.js') }}"></script>
     <script src="{{ url_for('static', filename='static/js/timeago.js') }}"></script>
     <script src="{{ url_for('static', filename='static/js/bottomscript.js') }}"></script>
 {% endblock %}
