--- a/main/static/static/css/main.css
+++ b/main/static/static/css/main.css
@@ -1,7 +1,30 @@
-/* https://www.biliplus.com/style/biliplus.min.css?180127 */
+/* 引用自：https://www.biliplus.com/style/biliplus.css */
+
+/*------index------*/
+
+.hoveritem > .hover {
+    display: none
+}
+
+.hoveritem:hover > .normal {
+    display: none
+}
+
+.hoveritem:hover > .hover {
+    display: inline
+}
+
+@keyframes notice-in {
+    from {
+        right: -260px
+    }
+    to {
+        right: 0
+    }
+}
 
 .Biliplus-Notice {
-    color: #fff;
+    color: #FFF;
     position: fixed;
     right: 0;
     padding: 10px;
@@ -25,15 +48,11 @@
     right: 100%;
     height: 0;
     width: 0;
-    border: 0 solid transparent;
+    border: solid transparent;
+    border-width: 0 0;
     padding: 0;
     margin: 0
 }
 
-.hoveritem:hover>.normal,.hoveritem>.hover {
-    display: none
-}
-
-.hoveritem:hover>.hover {
-    display: inline
-}
+/*------index------*/
+/*end*/
