--- a/main/templates/user/upload.html
+++ b/main/templates/user/upload.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% from 'macros.html' import message_part with context %}
 
 {% block title %}上传页面{% endblock %}
 
@@ -14,16 +15,7 @@
             <div class="sub header"></div>
         </div>
     </div>
-    {% with messages = get_flashed_messages(with_categories=True) %}
-        {% if messages %}
-            <div class="ui {{ messages[0][0] }} message">
-                <i class="close icon"></i>
-                <div class="header">
-                </div>
-                {{ messages[0][1] }}
-            </div>
-        {% endif %}
-    {% endwith %}
+    {{ message_part() }}
     <div class="thirteen wide column">
         <div class="ui tall stacked segment">
             <form action="" class="ui form" method="post" enctype="multipart/form-data">
@@ -46,11 +38,4 @@
             </form>
         </div>
     </div>
-{% endblock %}
-
-{% block script %}
-    {{ super() }}
-    <script>
-        $('.ui.dropdown').dropdown();
-    </script>
 {% endblock %}
