--- a/main/templates/user/index.html
+++ b/main/templates/user/index.html
@@ -1,4 +1,4 @@
-{% extends "/base.html" %}
+{% extends "base.html" %}
 {% from 'macros.html' import photo_card with context %}
 
 {% block title %}用户{% endblock %}
