--- a/main/templates/auth/login.html
+++ b/main/templates/auth/login.html
@@ -36,6 +36,11 @@
                         <i class="lock icon"></i>
                     </div>
                 </div>
+                <div class="ui checkbox">
+                    <input type="checkbox" name="remember" value="True">
+                    <label>记住账号</label>
+                    <br>
+                </div>
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                 <input class="ui fluid large green submit button" type="submit" name="submit" value="登录">
             </div>
