--- a/main/templates/auth/login.html
+++ b/main/templates/auth/login.html
@@ -36,23 +36,15 @@
                         <i class="lock icon"></i>
                     </div>
                 </div>
-                <div class="ui checkbox">
-                    <input type="checkbox" name="remember" value="True">
-                    <label>记住账号</label>
-                    <br>
+                <div class="inline field">
+                    <div class="ui checkbox">
+                        <input type="checkbox" name="remember" value="True">
+                        <label>记住账号</label>
+                    </div>
                 </div>
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                 <input class="ui fluid large green submit button" type="submit" name="submit" value="登录">
             </div>
         </form>
     </div>
-{% endblock %}
-
-{% block script %}
-    {{ super() }}
-    <script>
-        $('.message .close').on('click', function () {
-            $(this).closest('.message').transition('fade');
-        });
-    </script>
 {% endblock %}
