--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -7,7 +7,8 @@
         <meta name="author" content="yuangezhizao"/>
         <meta name="Copyright" content="Copyright yuangezhizao All Rights Reserved."/>
         <meta name="format-detection" content="telephone=no"/>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='static/Semantic-UI-CSS-master/semantic.min.css') }}">
+        <link rel="stylesheet" type="text/css"
+              href="{{ url_for('static', filename='static/Semantic-UI-CSS-master/semantic.min.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='static/css/main.css') }}">
         <link rel="dns-prefetch" href="//lab.yuangezhizao.cn">
         <link rel="dns-prefetch" href="//www.yuangezhizao.cn">
@@ -23,14 +24,19 @@
         {% block nav %}
             <a class="active item"><i class="home icon"></i>首页</a>
         {% endblock %}
-        <div class="right menu">
-            {% if current_user.is_authenticated %}
-                <a class="item" href="{{ url_for('auth.logout') }}" onclick="return auth.logout();"><i
-                        class="sign out icon"></i>注销</a>
-            {% else %}
+        {% if current_user.is_authenticated %}
+            <div class="ui right dropdown item"><i class="info icon"></i>更多<i class="dropdown icon"></i>
+                <div class="menu">
+                    <a class="item" href="{{ url_for('user.index', id=current_user.id) }}"><i class="settings icon"></i>我的</a>
+                    <a class="item" href="{{ url_for('auth.logout') }}" onclick="return auth.logout();"><i
+                            class="sign out icon"></i>注销</a>
+                </div>
+            </div>
+        {% else %}
+            <div class="right menu">
                 <a class="up item" href="{{ url_for('auth.login') }}"><i class="sign in icon"></i>登录</a>
-            {% endif %}
-        </div>
+            </div>
+        {% endif %}
     </div>
     {% block content %}{% endblock %}<br>
     <footer>
