--- a/main/templates/admin/register.html
+++ b/main/templates/admin/register.html
@@ -37,6 +37,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- 八个部门列表硬编码于此处 -->
                     <div class="field">
                         <label>角色</label>
                         <div class="ui selection dropdown">
@@ -51,6 +52,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- 四个角色列表硬编码于此处 -->
                 </div>
                 <div class="two fields">
                     <div class="field">
