--- a/main/templates/user/index.html
+++ b/main/templates/user/index.html
@@ -15,32 +15,88 @@
                 <div class="content">
                     <h3>用户信息</h3>
                     <div class="ui divided selection list">
-                        <div class="ui attached red segment">
-                            <div class="ui red horizontal label">用户名</div>
-                            {{ user.name }}
-                        </div>
-                        <div class="ui attached red segment">
+                        {% if current_user.is_admin %}
+                            <div class="ui attached red segment">
+                                <div class="ui red horizontal label">用户 id</div>
+                                {{ user.id }}
+                            </div>
+                            <div class="ui attached orange segment">
+                                <div class="ui orange horizontal label">用户名</div>
+                                {{ user.username }}
+                            </div>
+                            <div class="ui attached yellow segment">
+                                <div class="ui yellow horizontal label">邮箱</div>
+                                <a href="mailto:{{ user.email }}">{{ user.email }}</a>
+                            </div>
+                            <div class="ui attached olive segment">
+                                <div class="ui olive horizontal label">昵称</div>
+                                {{ user.name }}
+                            </div>
+                            <div class="ui attached green segment">
+                                <div class="ui green horizontal label">地区</div>
+                                {{ user.location }}
+                            </div>
+                            <div class="ui attached teal segment">
+                                <div class="ui teal horizontal label">关于我</div>
+                                {{ user.about_me }}
+                            </div>
+                            <div class="ui attached orange segment">
+                                <div class="ui orange horizontal label">角色</div>
+                                {{ user.role.name }}
+                            </div>
+                        {% endif %}
+                        <div class="ui attached blue segment">
                             <div class="ui blue horizontal label">所在部门</div>
                             {{ user.depart.name }}
+                        </div>
+                        <div class="ui attached violet segment">
+                            <div class="ui violet horizontal label">图片上传个数</div>
+                            {{ user.photos|length }}
+                        </div>
+                        <div class="ui attached purple segment">
+                            <div class="ui purple horizontal label">注册时间</div>
+                            {{ moment(user.member_since).format('YYYY-MM-DD，HH:mm:ss a') }}
+                        </div>
+                        <div class="ui attached pink segment">
+                            <div class="ui pink horizontal label">上次活跃</div>
+                            {{ moment(user.last_seen).format('YYYY-MM-DD，HH:mm:ss a') }}
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    {% if current_user == user %}
+        <div class="ui tall stacked segment">
+            <h3>管理</h3>
+            <a href="{{ url_for('user.upload') }}" class="ui black button" target='_blank'>素材上传</a>
+            {% if current_user.can('RIGISTER') %}
+                <a href="{{ url_for('auth.register') }}" class="ui green button" target='_blank'>注册新用户</a>
+            {% endif %}
+            {% if current_user.can('SET_PUBLIC') %}
+                <a href="#" class="ui blue button" target='_blank'>设置公开权限</a>
+            {% endif %}
+            {% if current_user.can('MODERATE') %}
+                <a href="#" class="ui brown button" target='_blank'>发表评论意见</a>
+            {% endif %}
+        </div>
+    {% endif %}
     <div class="ui tall stacked segment">
         <div class="ui divided items">
             <div class="item">
                 <div class="content">
                     <h3>图片</h3>
                     {% if photos %}
-                        {% for photo in photos %}
-                            {{ photo_card(photo) }}
-                        {% endfor %}
+                        <div class="ui cards">
+                            {% for photo in photos %}
+                                {{ photo_card(photo) }}
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        <div class="ui red disabled button">暂无图片</div>
                     {% endif %}
                 </div>
             </div>
         </div>
     </div>
-    <!-- TODO：无图片 -->
 {% endblock %}
