移除不必要的 id

--- a/main/templates/admin/register.html
+++ b/main/templates/admin/register.html
@@ -9,14 +9,14 @@
 {% endblock %}
 
 {% block content %}
-    <div id="column">
+    <div>
         <h2 class="ui green image header">
             <div class="content">
                 注册
             </div>
         </h2>
         {{ message_part() }}
-        <form id="a" class="ui large form" action="" method="POST">
+        <form class="ui large form" action="" method="POST">
             <div class="ui stacked segment">
                 <div class="two fields">
                     <div class="field">
