--- a/main/templates/auth/login.html
+++ b/main/templates/auth/login.html
@@ -9,14 +9,14 @@
 {% endblock %}
 
 {% block content %}
-    <div id="column">
+    <div>
         <h2 class="ui green image header">
             <div class="content">
                 登录
             </div>
         </h2>
         {{ message_part() }}
-        <form id="a" class="ui large form" action="" method="POST">
+        <form class="ui large form" action="" method="POST">
             <div class="ui stacked segment">
                 <div class="field">
                     <label>用户名</label>
