--- a/main/templates/ins/photos_list.html
+++ b/main/templates/ins/photos_list.html
@@ -42,6 +42,34 @@
             <div class="label">未公开</div>
         </div>
     </div>
+    <form action="" class="ui form" method="get">
+        <div class="field">
+            <label>任务分类一</label>
+            <select class="ui fluid selectioninline dropdown" id="task_name_first" name="task_name_first">
+                <option value="0">==请选择==</option>
+                <option value="1组织健全">1组织健全</option>
+                <option value="2制度完善">2制度完善</option>
+                <option value="3运行规范">3运行规范</option>
+                <option value="4活动经常">4活动经常</option>
+                <option value="5档案齐全">5档案齐全</option>
+                <option value="6作用突出">6作用突出</option>
+                <option value="7附加项目">7附加项目</option>
+            </select>
+        </div>
+        <div class="field">
+            <label>任务分类二</label>
+            <select class="ui fluid selection dropdown" id="task_name_second" name="task_name_second">
+            </select>
+        </div>
+        <div class="field">
+            <label>任务分类三</label>
+            <select class="ui fluid selection dropdown" id="task_name_third" name="task_name_third">
+            </select>
+        </div>
+        <br>
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+        <input class="ui positive button" type="submit" value="点击筛选">
+    </form>
     <table id="photos_list_table" class="tablesorter ui sortable unstackable celled striped red compact table">
         <thead>
         <tr class="positive">
@@ -100,6 +128,40 @@
     <script>
         $(document).ready(function () {
             $("#photos_list_table").tablesorter({sortList: [[0, 0]]});
+        });
+        // 下拉列表引用自 http://sign.lngqt.com/index.php?m=Home&c=Colleges，暂未使用 semantic-ui dropdown 特性
+        $('#task_name_first').change(function () {
+            var task_name_first = $(this).val();
+            $.ajax({
+                url: "{{ url_for('user.get_task_name_html') }}",
+                type: "post",
+                async: false,
+                data: {
+                    action: 'getseconds',
+                    task_name_first: task_name_first,
+                    csrf_token: "{{ csrf_token() }}"
+                },
+                success: function (data) {
+                    $('#task_name_second').html(data);
+                }
+            });
+        });
+        $('#task_name_second').change(function () {
+            var task_name_second = $(this).val();
+            $.ajax({
+                url: "{{ url_for('user.get_task_name_html') }}",
+                type: "post",
+                async: false,
+                data: {
+                    action: 'getthirds',
+                    task_name_first: $('#task_name_first').val(),
+                    task_name_second: task_name_second,
+                    csrf_token: "{{ csrf_token() }}"
+                },
+                success: function (data) {
+                    $('#task_name_third').html(data);
+                }
+            });
         });
     </script>
 {% endblock %}
