--- a/main/templates/macros.html
+++ b/main/templates/macros.html
@@ -43,3 +43,33 @@
         {% endif %}
     {% endwith %}
 {% endmacro %}
+
+{% macro pagination_widget(pagination, endpoint, fragment='') %}
+    <ul class="ui buttons" style="text-align: center;">
+        {#  TODO：style 不生效  #}
+        <a class="ui red icon button" {% if pagination.has_prev %}href="
+                {{ url_for(endpoint, page=pagination.prev_num, **kwargs) }}{{ fragment }}"{% else %}{% endif %}>
+            <i class="angle double left icon"></i>上一页
+        </a>
+        {% for p in pagination.iter_pages() %}
+            {% if p %}
+                {% if p == pagination.page %}
+                    <li class="ui blue disabled button">
+                        <span>{{ p }}</span>
+                    </li>
+                {% else %}
+                    <a class="ui blue button"
+                       href="{{ url_for(endpoint, page = p, **kwargs) }}{{ fragment }}">{{ p }}</a>
+                {% endif %}
+            {% else %}
+                <li class="ui blue basic button"><a href="#">&hellip;</a></li>
+            {% endif %}
+        {% endfor %}
+        {% if not pagination.has_next %}{% endif %}
+        <a class="ui green icon button"
+           {% if pagination.has_next %}href="
+                   {{ url_for(endpoint, page=pagination.next_num, **kwargs) }}{{ fragment }}"{% else %}{% endif %}>
+            <i class="angle double right icon"></i>下一页
+        </a>
+    </ul>
+{% endmacro %}
