--- a/main/templates/macros.html
+++ b/main/templates/macros.html
@@ -20,7 +20,7 @@
                 </a>
             </div>
             <div class="content">
-                <a class="header">{{ user.name }}</a>
+                <a class="header" href="{{ url_for('user.index', id=user.id) }}">{{ user.name }}</a>
                 <div class="meta">
                     <a>{{ moment(photo.timestamp).format('YYYY MMMM Do ，h:mm:ss a') }}</a>
                 </div>
@@ -44,32 +44,33 @@
     {% endwith %}
 {% endmacro %}
 
-{% macro pagination_widget(pagination, endpoint, fragment='') %}
-    <ul class="ui buttons" style="text-align: center;">
-        {#  TODO：style 不生效  #}
-        <a class="ui red icon button" {% if pagination.has_prev %}href="
-                {{ url_for(endpoint, page=pagination.prev_num, **kwargs) }}{{ fragment }}"{% else %}{% endif %}>
-            <i class="angle double left icon"></i>上一页
-        </a>
-        {% for p in pagination.iter_pages() %}
-            {% if p %}
-                {% if p == pagination.page %}
-                    <li class="ui blue disabled button">
-                        <span>{{ p }}</span>
-                    </li>
+{% macro pagination_widget(pagination, endpoint) %}
+    <div style="text-align: center;">
+        <ul class="ui buttons">
+            <a class="ui red icon button" {% if pagination.has_prev %}href="
+                {{ url_for(endpoint, page=pagination.prev_num, **kwargs) }}"{% else %}{% endif %}>
+                <i class="angle double left icon"></i>上一页
+            </a>
+            {% for p in pagination.iter_pages() %}
+                {% if p %}
+                    {% if p == pagination.page %}
+                        <li class="ui blue disabled button">
+                            <span>{{ p }}</span>
+                        </li>
+                    {% else %}
+                        <a class="ui blue button"
+                           href="{{ url_for(endpoint, page = p, **kwargs) }}">{{ p }}</a>
+                    {% endif %}
                 {% else %}
-                    <a class="ui blue button"
-                       href="{{ url_for(endpoint, page = p, **kwargs) }}{{ fragment }}">{{ p }}</a>
+                    <li class="ui blue basic button"><a href="#">&hellip;</a></li>
                 {% endif %}
-            {% else %}
-                <li class="ui blue basic button"><a href="#">&hellip;</a></li>
-            {% endif %}
-        {% endfor %}
-        {% if not pagination.has_next %}{% endif %}
-        <a class="ui green icon button"
-           {% if pagination.has_next %}href="
-                   {{ url_for(endpoint, page=pagination.next_num, **kwargs) }}{{ fragment }}"{% else %}{% endif %}>
-            <i class="angle double right icon"></i>下一页
-        </a>
-    </ul>
+            {% endfor %}
+            {% if not pagination.has_next %}{% endif %}
+            <a class="ui green icon button"
+               {% if pagination.has_next %}href="
+                   {{ url_for(endpoint, page=pagination.next_num, **kwargs) }}"{% else %}{% endif %}>
+                <i class="angle double right icon"></i>下一页
+            </a>
+        </ul>
+    </div>
 {% endmacro %}
